# NUCLEO-C5A3ZG

./: .gitignore  README.md
firmware/stm32c5-ai/: CMakeLists.txt
firmware/stm32c5-ai/src/: main.c
firmware/stm32c5-ai/src/ap/: ap.c  ap_def.h
firmware/stm32c5-ai/src/ap/modules/: module.c  module.h
firmware/stm32c5-ai/src/ap/modules/common/cli/: cli.c
firmware/stm32c5-ai/src/ap/modules/common/cli/driver/: cli_net.c  cli_net.h
firmware/stm32c5-ai/src/ap/modules/common/event/: event.c  event.h
firmware/stm32c5-ai/src/ap/modules/network/iperf/: iperf.c
firmware/stm32c5-ai/src/ap/modules/network/net/: net.c
firmware/stm32c5-ai/src/bsp/: bsp.h
firmware/stm32c5-ai/src/bsp/device/: stm32_external_env.h  stm32c5xx_hal_conf.h  stm32c5xx_it.c  syscalls.c
firmware/stm32c5-ai/src/bsp/ldscript/: STM32C5A3xx_FLASH.ld
firmware/stm32c5-ai/src/bsp/rtos/: FreeRTOSConfig.h  rtos.c  rtos.h
firmware/stm32c5-ai/src/bsp/startup/: startup_stm32c5a3xx.c
firmware/stm32c5-ai/src/common/hw/include/: assert_def.h  cdc.h  uart.h
firmware/stm32c5-ai/src/common/hw/include/osal/: thread.h
firmware/stm32c5-ai/src/hw/: hw.c  hw.h  hw_def.h
firmware/stm32c5-ai/src/hw/driver/: assert.c  cdc.c  fault.c  flash.c  led.c  reset.c  rtc.c  uart.c
firmware/stm32c5-ai/src/hw/driver/eth/: eth.c  eth.h
firmware/stm32c5-ai/src/hw/driver/usb/: usb.c  usb.h
firmware/stm32c5-ai/src/hw/driver/usb/stm32/: usbd_conf.c
firmware/stm32c5-ai/src/hw/driver/usb/stm32/usb_cdc/: usbd_cdc.c  usbd_cdc_if.c  usbd_cdc_if.h  usbd_desc.c
firmware/stm32c5-ai/src/hw/driver/usb/tinyusb/: tusb_config.h  usb_descriptors.c
firmware/stm32c5-ai/src/hw/driver/usb/usbx/: mx_usb_drd_fs.c  mx_usb_drd_fs.h  mx_usbx_app.c  mx_usbx_app.h  usbx_cdc.c  usbx_cdc.h  ux_stm32_device_descriptors_config.h  ux_user.h
firmware/stm32c5-ai/src/hw/osal/: thread.c
firmware/stm32c5-ai/src/lib/FreeRTOS/Source/portable/GCC/ARM_CM33_NTZ/non_secure/: port.c
firmware/stm32c5-ai/src/lib/ST/usbx/: LICENSE.md
firmware/stm32c5-ai/src/lib/ST/usbx/common/core/inc/: ux_api.h  ux_class_audio10.h  ux_class_audio20.h  ux_utility.h
firmware/stm32c5-ai/src/lib/ST/usbx/common/core/src/: ux_device_stack_control_request_process.c  ux_system_initialize.c  ux_system_uninitialize.c  ux_utility_debug_log.c  ux_utility_delay_ms.c
firmware/stm32c5-ai/src/lib/ST/usbx/common/usbx_device_classes/inc/: ux_device_class_audio.h  ux_device_class_audio10.h  ux_device_class_cdc_acm.h  ux_device_class_hid.h  ux_device_class_storage.h
firmware/stm32c5-ai/src/lib/ST/usbx/common/usbx_device_classes/src/: ux_device_class_cdc_acm_initialize.c
firmware/stm32c5-ai/src/lib/ST/usbx/interfaces/usbx_stm32_device_controllers/: ux_dcd_stm32.h  ux_dcd_stm32_callback.c  ux_dcd_stm32_endpoint_create.c  ux_dcd_stm32_endpoint_destroy.c  ux_dcd_stm32_endpoint_reset.c  ux_dcd_stm32_endpoint_stall.c  ux_dcd_stm32_endpoint_status.c  ux_dcd_stm32_frame_number_get.c  ux_dcd_stm32_function.c  ux_dcd_stm32_initialize.c  ux_dcd_stm32_initialize_complete.c  ux_dcd_stm32_register_callback.c  ux_dcd_stm32_transfer_abort.c  ux_dcd_stm32_transfer_request.c  ux_dcd_stm32_transfer_run.c  ux_dcd_stm32_uninitialize.c
firmware/stm32c5-ai/src/lib/ST/usbx/interfaces/usbx_stm32_device_descriptors/: ux_stm32_device_descriptors.c  ux_stm32_device_descriptors.h
firmware/stm32c5-ai/src/lib/ST/usbx/ports/freertos/inc/: ux_os_utility.h  ux_port.h
firmware/stm32c5-ai/src/lib/ST/usbx/ports/freertos/src/: ux_os_utility_event_flags_create.c  ux_os_utility_event_flags_delete.c  ux_os_utility_event_flags_get.c  ux_os_utility_event_flags_set.c  ux_os_utility_mutex_create.c  ux_os_utility_mutex_delete.c  ux_os_utility_mutex_off.c  ux_os_utility_mutex_on.c  ux_os_utility_semaphore_create.c  ux_os_utility_semaphore_delete.c  ux_os_utility_semaphore_get.c  ux_os_utility_semaphore_put.c  ux_os_utility_sleep_ms.c  ux_os_utility_thread_create.c  ux_os_utility_thread_delete.c  ux_os_utility_thread_identify.c  ux_os_utility_thread_relinquish.c  ux_os_utility_thread_resume.c  ux_os_utility_thread_schedule_other.c  ux_os_utility_thread_sleep.c  ux_os_utility_thread_suspend.c  ux_os_utility_timer_create.c  ux_os_utility_timer_delete.c  ux_os_utility_timer_start.c
firmware/stm32c5-ai/src/lib/lwip/interfaces/custom/: custom_interface.c  custom_interface.h
firmware/stm32c5-ai/src/lib/lwip/interfaces/ethernet/: eth_interface_freertos.c  eth_interface_freertos.h
firmware/stm32c5-ai/src/lib/lwip/port/: lwipopts.h  mx_lwip.c  mx_lwip.h  mx_lwip_phy.h  mx_phy.h  mx_phy1.h  net_phy.c
firmware/stm32c5-ai/src/lib/lwip/ports/common/arch/: cc.h  init.h
firmware/stm32c5-ai/src/lib/lwip/ports/freertos/arch/: sys_arch.c  sys_arch.h
firmware/stm32c5-ai/src/lib/lwip/src/apps/lwiperf/: lwiperf.c
firmware/stm32c5-ai/test/: tcp_sink.py  usb_speed.py
firmware/stm32c5-cube/: .mxproject  stm32-c5.ioc2
firmware/stm32c5-cube/stm32-c5_cmake/: CMakeLists.txt  CMakePresets.json
firmware/stm32c5-cube/stm32-c5_cmake/cmake/: components.cmake  files.cmake  flags.cmake  target.cmake
firmware/stm32c5-cube/stm32-c5_cmake/user_modifiable/_debug_GCC_STM32C5A3ZGT6/: Pre_Include_Global.h  RTE_Components.h
firmware/stm32c5-fw/: CMakeLists.txt
firmware/stm32c5-fw/src/ap/: ap.c
firmware/stm32c5-fw/src/bsp/: bsp.c  bsp.h
firmware/stm32c5-fw/src/bsp/device/: stm32c5xx_hal_conf.h  stm32c5xx_it.h
firmware/stm32c5-fw/src/hw/: hw.c  hw.h  hw_def.h
firmware/stm32c5-fw/src/hw/driver/: gpio.c
